Update initial Conclusion

--- a/tesis_article.tex
+++ b/tesis_article.tex
@@ -3125,8 +3125,6 @@ All the mathematical representations and the programmatic development on Python 
 
 \section{Understanding the Control Problem}
 
-\section{Defining the Control Strategies}
-
 \section{PID Control Strategy}
 
 \section{MPC Control Strategy}
@@ -3153,6 +3151,17 @@ All the mathematical representations and the programmatic development on Python 
 
 % ---------------------------------------------------------
 \chapter{Conclusions}
+
+Mechatronics engineering seeks to assertively integrate multiple technological and scientific pillars through integrated solutions for modern problems. This research project aims to creatively integrate some of these pillars, such as robotics, computer vision, modern control and software integration, in a possible solution to a tangible necessity in today's society.\\
+
+This study developed an active robotic solution designed through Baxter robot for the assistance of patients with upper limb motor disabilities.\\
+
+There are medical devices for feeding patients on the market today, but none of them (currently) have active functionalities through systems that monitor the current position of the user's mouth and have a manipulator with anomaly detection capabilities.\\
+
+Baxter Bon Appetit offers a breakthrough in active patient feeding systems as a theoretical and practical contribution to modern solutions of increasing problems in the world's population. This project is fully open-source and seeks a commitment towards promoting these developments for social inclusion and the continuous improvement of projects that support people with motor disabilities.\\
+
+Finally, this mechatronics project manages to implement multiple spheres of knowledge in an innovative way, to meet a relevant need of society and thus, continue aiming to encourage the study of these active manipulative systems for the benefit of humanity.\\
+
 
 % ---------------------------------------------------------
 \chapter{Ethical Considerations}
