Update Control chapter with initial theory

--- a/references.bib
+++ b/references.bib
@@ -711,6 +711,40 @@
     note={\url{https://medium.com/@ageitgey/machine-learning-is-fun-part-3-deep-learning-and-convolutional-neural-networks-f40359318721}}
 }
 
+@misc{cite_towards_data_science, 
+    title={Introduction to Robotic Control Systems},
+    author={Mathanraj Sharma},
+    year={2020},
+    note={\url{https://towardsdatascience.com/introduction-to-robotic-control-systems-9ec17c8ac24f}}
+}
 
+@article{cite_model_predictive_control_theory_and_practice,
+    author = {Garcia C and Prett D and Moari M},
+    year = {1989},
+    title = {Model predictive control:
+Theory and practice-a survey},
+    note = {\url{https://www.sciencedirect.com/science/article/abs/pii/0005109889900022}}
+}
 
+@article{cite_receding_horizon_control_aerial_vehicles,
+    author = {Bellingham J and  Richards A and How J},
+    year = {2002},
+    title = {Receding horizon control of autonomous aerial vehicles},
+    note = {\url{https://www.semanticscholar.org/paper/Receding-horizon-control-of-autonomous-aerial-Bellingham-Richards/a5d00bf04c0dcb71157ea4211cbad9a0e3c975de#citing-papers}}
+}
 
+@article{cite_reaching_in_clutter_with_whole_arm_tactile_sensing,
+    author = {Advait Jain and Marc D Killpack and Aoron Edsinger and Charles C Kemp},
+    year = {2013},
+    title = {Reaching in clutter with whole-arm tactile sensing},
+    journal = {RThe international Journal of Robotics Research },
+    doi = {10.1177/0278364912471865},
+    note = {\url{https://journals.sagepub.com/doi/10.1177/0278364912471865}}
+}
+
+@misc{cite_convex_optimization_problem, 
+    title={Convex optimization problem},
+    author={ByungSoo Ko},
+    year={2017},
+    note={\url{https://kobiso.github.io/research/research-convex-optimization/}}
+}
